--- a/classicMotorcycles.html
+++ b/classicMotorcycles.html
@@ -6,75 +6,84 @@
 		Classic Motorcycles
 	</title>
 	<link rel="icon" type="image/jpg" href="imgs/pageIcon.jpg" />
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<main>
-		<h1>Classic Motorcycles</h1>
+	<div id="container">
+		<header>
+			<h1>Blackblood</h1>
+		</header>
+		<div id="main">
+			<main>
+				<h1>Classic Motorcycles</h1>
+				<nav>
+					<ul>
+						<li>
+							<a href="#iron-883">Harley Davidson.</a>
+						</li>
+						<li>
+							<a href="#meteor-350">Royal Enfield.</a>
+						</li>
+						<li>
+							<a href="#scrambler">Triumph.</a>
+						</li>
+					</ul>
+				</nav>
+				<hr>
+				<section>
+					<h2 id="iron-883">Harley-Davidson Iron 833</h2>
+					<p> The Harley-Davidson’s <b>Iron 883</b> gets a simple name because that’s just what it is: a basic, elemental canvas upon which to hang your custom desires. The sole 883cc model in H-D’s line consists of nothing but stripped-down and blacked-out metal, rolling with low bars, a low seat height, and—be warned—slammed suspension. Looking for chrome? Forget it—the Iron’s black powdercoated 883cc engine doubles down on the dark with black rocker covers, and black on the throwback round air cleaner cover. Harley also delves into the bobber playbook with a solo seat and chopped fenders allowing the Iron 883 to flash a little rubber, while a black fork with gaiters adds a splash of nostalgia.</p>
+					<figure>
+						<img src =  "imgs/harley-davidson-iron-883.jpg" alt = "Motorcycle" style="width:50%;"/>
+						<figcaption>
+							<a href="https://www.harley-davidson.com/br/pt/motorcycles/2020/iron-883.html" target="blank">Iron 883</a>
+						</figcaption>
+						
+					</figure>
 
-		<ul>
-			<li>
-				<a href="#iron-883">Harley Davidson.</a>
-			</li>
-			<li>
-				<a href="#meteor-350">Royal Enfield.</a>
-			</li>
-			<li>
-				<a href="#scrambler">Triumph.</a>
-			</li>
-		</ul>
-		<hr>
-		<section>
-			<h2 id="iron-883">Harley-Davidson Iron 833</h2>
-			<p> The Harley-Davidson’s <b>Iron 883</b> gets a simple name because that’s just what it is: a basic, elemental canvas upon which to hang your custom desires. The sole 883cc model in H-D’s line consists of nothing but stripped-down and blacked-out metal, rolling with low bars, a low seat height, and—be warned—slammed suspension. Looking for chrome? Forget it—the Iron’s black powdercoated 883cc engine doubles down on the dark with black rocker covers, and black on the throwback round air cleaner cover. Harley also delves into the bobber playbook with a solo seat and chopped fenders allowing the Iron 883 to flash a little rubber, while a black fork with gaiters adds a splash of nostalgia.</p>
-			<figure>
-				<img src =  "imgs/harley-davidson-iron-883.jpg" alt = "Motorcycle" style="width:50%;"/>
-				<figcaption>
-					<a href="https://www.harley-davidson.com/br/pt/motorcycles/2020/iron-883.html" target="blank">Iron 883</a>
-				</figcaption>
-				
-			</figure>
+					<p>It looks good, now does it sound good?</p>
 
-			<p>It looks good, now does it sound good?</p>
+					<iframe src="https://www.youtube.com/embed/P-v1HrM8g70?start=152" title="Harley Davidson Sportster IRON 883 - Life is a ride (short film)" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</section>
+				<hr>
+				<section>
+					<h2 id="meteor-350">Royal Enfield Meteor</h2>
+					<p> The <b>Meteor</b> is an Indian Cruiser-style motorcycle manufactured by Royal Enfield in India. The model was developed by engineers based at Royal Enfield’s two state-of-the-art technical centres, in Chennai. The Meteor is a direct replacement to Thunderbird 350.</p>
+					<figure>
+						<img src =  "imgs/Royal-Enfield-Meteor-350-moto-adventure.webp" alt = "Motorcycle" style="width:50%;"/>
+						<figcaption>
+							<a href="https://www.royalenfield.com/br/pt/motorcycles/meteor/" target="blank">Meteor 350</a>
+						</figcaption>
+					</figure>
 
-			<iframe width="1190" height="669" src="https://www.youtube.com/embed/P-v1HrM8g70?start=152" title="Harley Davidson Sportster IRON 883 - Life is a ride (short film)" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</section>
-		<hr>
-		<section>
-			<h2 id="meteor-350">Royal Enfield Meteor</h2>
-			<p> The <b>Meteor</b> is an Indian Cruiser-style motorcycle manufactured by Royal Enfield in India. The model was developed by engineers based at Royal Enfield’s two state-of-the-art technical centres, in Chennai. The Meteor is a direct replacement to Thunderbird 350.</p>
-			<figure>
-				<img src =  "imgs/Royal-Enfield-Meteor-350-moto-adventure.webp" alt = "Motorcycle" style="width:50%;"/>
-				<figcaption>
-					<a href="https://www.royalenfield.com/br/pt/motorcycles/meteor/" target="blank">Meteor 350</a>
-				</figcaption>
-			</figure>
+					<p>Nah. How can this be? At this price it must be fake. Well, its not.</p>
 
-			<p>Nah. How can this be? At this price it must be fake. Well, its not.</p>
+					<iframe src="https://www.youtube.com/embed/vbIpO3yMkyQ" title="The Royal Enfield Meteor Digital Launch | #MissOutOnNothing" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</section>
+				<hr>
+				<section>
+					<h2 id="scrambler">Triumph Scrambler</h2>
+					<p> The <b>Triumph Scrambler</b> is a British motorcycle made by Triumph Motorcycles. Launched in 2006, it was the last Triumph styled by designer John Mockett, who had begun working with the small factory team at Triumph in 1989, rationalising existing models based on a very successful modular design plan, including the concept and styling of the unfaired Trident triples for their 1990 IFMA launch. Mockett subsequently served as principal stylist for most of the bikes introduced up to 2006.</p>
+					<figure>
+						<img src =  "imgs/street-scrambler.jpg" alt = "Motorcycle" style="width:50%;"/>
+						<figcaption>
+							<a href="https://www.triumphmotorcycles.com.br/motocicletas/classic/bonneville-scrambler-900" target="blank">Triumph Scrambler</a>
+						</figcaption>
+					</figure>
 
-			<iframe width="1190" height="628" src="https://www.youtube.com/embed/vbIpO3yMkyQ" title="The Royal Enfield Meteor Digital Launch | #MissOutOnNothing" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</section>
-		<hr>
-		<section>
-			<h2 id="scrambler">Triumph Scrambler</h2>
-			<p> The <b>Triumph Scrambler</b> is a British motorcycle made by Triumph Motorcycles. Launched in 2006, it was the last Triumph styled by designer John Mockett, who had begun working with the small factory team at Triumph in 1989, rationalising existing models based on a very successful modular design plan, including the concept and styling of the unfaired Trident triples for their 1990 IFMA launch. Mockett subsequently served as principal stylist for most of the bikes introduced up to 2006.</p>
-			<figure>
-				<img src =  "imgs/street-scrambler.jpg" alt = "Motorcycle" style="width:50%;"/>
-				<figcaption>
-					<a href="https://www.triumphmotorcycles.com.br/motocicletas/classic/bonneville-scrambler-900" target="blank">Triumph Scrambler</a>
-				</figcaption>
-			</figure>
+					<p>Wanna chills? They are free.</p>
 
-			<p>Wanna chills? They are free.</p>
-
-			<iframe width="1190" height="559" src="https://www.youtube.com/embed/XcNwEfGuRE0" title="Triumph Scrambler kicks up a SANDSTORM" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</section>
-	</main>
-	<footer>
-		<hr>
-		<a href="index.html">
-			<p><b>Go Back.</b></p>
-		</a>
-		<p> Think of a more interesting footer</p>
-	</footer>
+					<iframe src="https://www.youtube.com/embed/XcNwEfGuRE0" title="Triumph Scrambler kicks up a SANDSTORM" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</section>
+			</main>
+		</div>
+		<footer>
+			<hr>
+			<a href="index.html">
+				<p class="Blackblood"><b>Blackblood</b></p>
+			</a>
+			<p> David A.</p>
+		</footer>
+	</div>
 </body>
 </html>
