--- a/index.html
+++ b/index.html
@@ -6,38 +6,53 @@
 		Blackblood
 	</title>
 	<link rel="icon" type="image/jpg" href="imgs/pageIcon.jpg" />
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<main>
-		<h1>Blackblood</h1>
+	<div id="container">
+		<header>
+			<h1>Blackblood</h1>
+		</header>
+		<div id="main">
+			<main>
+				<section>
+					<h2>Classic Motorcycles</h2>
+					<p>Get to know classical models and a bit of their story.</p>
+					<a href="classicMotorcycles.html">
+						<figure>
+							<img src =  "imgs/harley-davidson-iron-883.jpg" alt = "Motorcycle" />
+							<figcaption>
+								Classic Motorcycles.
+							</figcaption>
+						</figure>
+					</a>
+				</section>
 
-		<section>
-			<h2>Classic Motorcycles</h2>
-			<p>Get to know classical models and a bit of their story.</p>
-			<a href="classicMotorcycles.html">
-				<figure>
-					<img src =  "imgs/harley-davidson-iron-883.jpg" width= "50%" alt = "Motorcycle" />
-					<figcaption>
-						Classics
-					</figcaption>
-				</figure>
+				<br>
+
+				<section>
+					<h2>Experimental Page</h2>
+					<p>
+						Find and experiment with new features.
+					</p>
+					<a href="experimental.html">
+						<figure>
+							<img src="imgs/terminator.jpg" alt="Terminator"/>
+							<figcaption>
+								Experimental Features.
+							</figcaption>
+						</figure>
+					</a>
+				</section>
+			</main>
+		</div>
+		<footer>
+			<hr>
+			<a href="index.html">
+				<p class="Blackblood"><b>Blackblood</b></p>
 			</a>
-		</section>
-
-		<br>
-
-		<section>
-			<h2>Experimental Page</h2>
-			<p>
-				<a href="experimental.html">
-					Find and experiment with new features.
-				</a>
-			</p>
-		</section>
-	</main>
-	<footer>
-		<hr>
-		<p> Think of a more interesting footer</p>
-	</footer>
+			<p> David A.</p>
+		</footer>
+	</div>
 </body>
 </html>
