Adding index return link in other pages.

--- a/classicMotorcycles.html
+++ b/classicMotorcycles.html
@@ -7,11 +7,12 @@
 	</title>
 	<link rel="icon" type="image/jpg" href="imgs/pageIcon.jpg" />
 	<link rel="stylesheet" href="css/style.css" />
+	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div id="container">
 		<header>
-			<h1>Blackblood</h1>
+			<a class="PageName" href="index.html"><h1>Blackblood</h1></a>
 		</header>
 		<div id="main">
 			<main>
@@ -26,6 +27,11 @@
 						</li>
 						<li>
 							<a href="#scrambler">Triumph.</a>
+						</li>
+						<li>
+							<a href="index.html">Back.
+								<i class="fa-solid fa-share fa-flip-horizontal"></i>
+							</a>
 						</li>
 					</ul>
 				</nav>
@@ -79,8 +85,8 @@
 		</div>
 		<footer>
 			<hr>
-			<a href="index.html">
-				<p class="Blackblood"><b>Blackblood</b></p>
+			<a class="PageName" href="index.html">
+				<p><b>Blackblood</b></p>
 			</a>
 			<p> David A.</p>
 		</footer>
