--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="container">
 		<header>
-			<h1>Blackblood</h1>
+			<a class="PageName" href="index.html"><h1>Blackblood</h1></a>
 		</header>
 		<div id="main">
 			<main>
@@ -48,8 +48,8 @@
 		</div>
 		<footer>
 			<hr>
-			<a href="index.html">
-				<p class="Blackblood"><b>Blackblood</b></p>
+			<a class="PageName" href="index.html">
+				<p><b>Blackblood</b></p>
 			</a>
 			<p> David A.</p>
 		</footer>
