Add Unity Projects Page.

--- a/classicMotorcycles.html
+++ b/classicMotorcycles.html
@@ -5,7 +5,7 @@
 	<title>
 		Classic Motorcycles
 	</title>
-	<link rel="icon" type="image/jpg" href="imgs/pageIcon.jpg" />
+	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg" />
 	<link rel="stylesheet" href="css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
@@ -40,7 +40,7 @@
 					<h2 id="iron-883">Harley-Davidson Iron 833</h2>
 					<p> The Harley-Davidson’s <b>Iron 883</b> gets a simple name because that’s just what it is: a basic, elemental canvas upon which to hang your custom desires. The sole 883cc model in H-D’s line consists of nothing but stripped-down and blacked-out metal, rolling with low bars, a low seat height, and—be warned—slammed suspension. Looking for chrome? Forget it—the Iron’s black powdercoated 883cc engine doubles down on the dark with black rocker covers, and black on the throwback round air cleaner cover. Harley also delves into the bobber playbook with a solo seat and chopped fenders allowing the Iron 883 to flash a little rubber, while a black fork with gaiters adds a splash of nostalgia.</p>
 					<figure>
-						<img src =  "imgs/harley-davidson-iron-883.jpg" alt = "Motorcycle" style="width:50%;"/>
+						<img src =  "imgs/classicMotorcycles/harley-davidson-iron-883.jpg" alt = "Motorcycle" style="width:50%;"/>
 						<figcaption>
 							<a href="https://www.harley-davidson.com/br/pt/motorcycles/2020/iron-883.html" target="blank">Iron 883</a>
 						</figcaption>
@@ -56,7 +56,7 @@
 					<h2 id="meteor-350">Royal Enfield Meteor</h2>
 					<p> The <b>Meteor</b> is an Indian Cruiser-style motorcycle manufactured by Royal Enfield in India. The model was developed by engineers based at Royal Enfield’s two state-of-the-art technical centres, in Chennai. The Meteor is a direct replacement to Thunderbird 350.</p>
 					<figure>
-						<img src =  "imgs/Royal-Enfield-Meteor-350-moto-adventure.webp" alt = "Motorcycle" style="width:50%;"/>
+						<img src =  "imgs/classicMotorcycles/Royal-Enfield-Meteor-350-moto-adventure.webp" alt = "Motorcycle" style="width:50%;"/>
 						<figcaption>
 							<a href="https://www.royalenfield.com/br/pt/motorcycles/meteor/" target="blank">Meteor 350</a>
 						</figcaption>
@@ -71,7 +71,7 @@
 					<h2 id="scrambler">Triumph Scrambler</h2>
 					<p> The <b>Triumph Scrambler</b> is a British motorcycle made by Triumph Motorcycles. Launched in 2006, it was the last Triumph styled by designer John Mockett, who had begun working with the small factory team at Triumph in 1989, rationalising existing models based on a very successful modular design plan, including the concept and styling of the unfaired Trident triples for their 1990 IFMA launch. Mockett subsequently served as principal stylist for most of the bikes introduced up to 2006.</p>
 					<figure>
-						<img src =  "imgs/street-scrambler.jpg" alt = "Motorcycle" style="width:50%;"/>
+						<img src =  "imgs/classicMotorcycles/street-scrambler.jpg" alt = "Motorcycle" style="width:50%;"/>
 						<figcaption>
 							<a href="https://www.triumphmotorcycles.com.br/motocicletas/classic/bonneville-scrambler-900" target="blank">Triumph Scrambler</a>
 						</figcaption>
