--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>
 		Blackblood
 	</title>
-	<link rel="icon" type="image/jpg" href="imgs/pageIcon.jpg" />
+	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg" />
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -20,9 +20,24 @@
 					<p>Get to know classical models and a bit of their story.</p>
 					<a href="classicMotorcycles.html">
 						<figure>
-							<img src =  "imgs/harley-davidson-iron-883.jpg" alt = "Motorcycle" />
+							<img src =  "imgs/classicMotorcycles/harley-davidson-iron-883.jpg" alt = "Motorcycle" />
 							<figcaption>
 								Classic Motorcycles.
+							</figcaption>
+						</figure>
+					</a>
+				</section>
+
+				<br>
+
+				<section>
+					<h2>Unity Projects</h2>
+					<p>Cool game-engine projects for you.</p>
+					<a href="unity.html">
+						<figure>
+							<img src =  "imgs/unity-logo.jpg" alt = "Unity" />
+							<figcaption>
+								Unity Projects.
 							</figcaption>
 						</figure>
 					</a>
