--- a/experimental.html
+++ b/experimental.html
@@ -5,7 +5,7 @@
 	<title>
 		Blackblood
 	</title>
-	<link rel="icon" type="image/jpg" href="imgs/pageIcon.jpg"/>
+	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg"/>
 	<link rel="stylesheet" href="css/style.css"/>
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
