--- a/classicMotorcycles.html
+++ b/classicMotorcycles.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="container">
 		<header>
-			<a class="PageName" href="index.html"><h1>Blackblood</h1></a>
+			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
 		</header>
 		<div id="main">
 			<main>
@@ -37,7 +37,7 @@
 				</nav>
 				<hr>
 				<section>
-					<h2 id="iron-883">Harley-Davidson Iron 833</h2>
+					<h2 id="iron-883">Harley-Davidson Iron 883</h2>
 					<p> The Harley-Davidson’s <b>Iron 883</b> gets a simple name because that’s just what it is: a basic, elemental canvas upon which to hang your custom desires. The sole 883cc model in H-D’s line consists of nothing but stripped-down and blacked-out metal, rolling with low bars, a low seat height, and—be warned—slammed suspension. Looking for chrome? Forget it—the Iron’s black powdercoated 883cc engine doubles down on the dark with black rocker covers, and black on the throwback round air cleaner cover. Harley also delves into the bobber playbook with a solo seat and chopped fenders allowing the Iron 883 to flash a little rubber, while a black fork with gaiters adds a splash of nostalgia.</p>
 					<figure>
 						<img src =  "imgs/classicMotorcycles/harley-davidson-iron-883.jpg" alt = "Motorcycle" style="width:50%;"/>
@@ -85,7 +85,7 @@
 		</div>
 		<footer>
 			<hr>
-			<a class="PageName" href="index.html">
+			<a class="page-name" href="index.html">
 				<p><b>Blackblood</b></p>
 			</a>
 			<p> David A.</p>
