--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 	</title>
 	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg" />
 	<link rel="stylesheet" href="css/style.css" />
+	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
-<body>
-	<div id="container">
-		<header>
-			<a class="PageName" href="index.html"><h1>Blackblood</h1></a>
+<body class = "light-mode">
+	<div id="container" class="container">
+		<header class = "light-mode">
+			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
 		</header>
+		<div class="toggle-dark-mode light-mode">
+				<i class="far fa-sun"></i>
+		</div>
 		<div id="main">
-			<main>
+			<main class = "light-mode">
 				<section>
 					<h2>Classic Motorcycles</h2>
 					<p>Get to know classical models and a bit of their story.</p>
@@ -61,13 +65,14 @@
 				</section>
 			</main>
 		</div>
-		<footer>
+		<footer class = "light-mode">
 			<hr>
-			<a class="PageName" href="index.html">
+			<a class="page-name" href="index.html">
 				<p><b>Blackblood</b></p>
 			</a>
 			<p> David A.</p>
 		</footer>
 	</div>
+	<script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
