--- a/experimental.html
+++ b/experimental.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="container">
 		<header>
-			<a class="PageName" href="index.html"><h1>Blackblood</h1></a>
+			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
 		</header>
 		<div id="main">
 			<main>
@@ -85,7 +85,7 @@
 		</div>
 		<footer>
 			<hr>
-			<a class="PageName" href="index.html">
+			<a class="page-name" href="index.html">
 				<p><b>Blackblood</b></p>
 			</a>
 			<p> David A.</p>
