--- a/unity.html
+++ b/unity.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="container">
 		<header>
-			<a class="PageName" href="index.html"><h1>Blackblood</h1></a>
+			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
 		</header>
 		<div id="main">
 			<main>
@@ -36,27 +36,33 @@
 				<section>
 					<h2 id="vehicleSimulation">Vehicle Simulation</h2>
 					<p> <b>Rigidbodies Dynamics</b> and <b>Vehicles Simulation</b> Project with both, local and <b>network performance</b>, in mind.</p>
-					<figure>
-						<img src =  "imgs/unity/vehicles.png" alt = "Vehicles" style="width:50%;"/>
-						<figcaption>
-							Ratrod
-						</figcaption>
-					</figure>
+					<div class="img-row">
+						<div class="img-column">
+							<figure>
+								<img src =  "imgs/unity/vehicles.png" alt = "Vehicles" style="width: 100%"/>
+								<figcaption>
+									Ratrod, front view.
+								</figcaption>
+							</figure>
+						</div>
 
-					<figure>
-						<img src =  "imgs/unity/ratrod.png" alt = "Vehicles" style="width:50%;"/>
-						<figcaption>
-							Ratrod
-						</figcaption>
-					</figure>
+						<div class="img-column">
+							<figure>
+								<img src =  "imgs/unity/ratrod.png" alt = "Vehicles" style="width: 100%"/>
+								<figcaption>
+									Ratrod, side view.
+								</figcaption>
+							</figure>
+						</div>
+					</div>
 
 					<p>It looks cool, now how does it perform?</p>
 
-					<iframe src="https://www.youtube.com/embed/jdEq3SozgVg" title="MuscleCar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/jdEq3SozgVg" title="MuscleCar" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 					<p>One more.</p>
 
-					<iframe src="https://www.youtube.com/embed/k-U_i9VnJuM" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/k-U_i9VnJuM" title="Suv TextDrive" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</section>
 				<hr>
 				<section>
@@ -77,7 +83,7 @@
 		</div>
 		<footer>
 			<hr>
-			<a class="PageName" href="index.html">
+			<a class="page-name" href="index.html">
 				<p><b>Blackblood</b></p>
 			</a>
 			<p> David A.</p>
