--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
 			<p> David A.</p>
 		</footer>
 	</div>
-	<script type="text/javascript" src="scripts/script.js"></script>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
