--- a/unity.html
+++ b/unity.html
@@ -9,13 +9,16 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class = "light-mode">
 	<div id="container">
-		<header>
+		<header class = "light-mode">
 			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
 		</header>
+		<div class="toggle-dark-mode light-mode">
+				<i class="far fa-sun"></i>
+		</div>
 		<div id="main">
-			<main>
+			<main class = "light-mode">
 				<h1>Unity Projects</h1>
 				<nav>
 					<ul>
@@ -81,7 +84,7 @@
 				</section>
 			</main>
 		</div>
-		<footer>
+		<footer class = "light-mode">
 			<hr>
 			<a class="page-name" href="index.html">
 				<p><b>Blackblood</b></p>
@@ -89,5 +92,6 @@
 			<p> David A.</p>
 		</footer>
 	</div>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
