--- a/classicMotorcycles.html
+++ b/classicMotorcycles.html
@@ -9,16 +9,16 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
-<body class = "light-mode">
+<body>
 	<div id="container">
-		<header class = "light-mode">
+		<header>
 			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
 		</header>
-		<div class="toggle-dark-mode light-mode">
+		<div class="toggle-dark-mode">
 				<i class="far fa-sun"></i>
 		</div>
 		<div id="main">
-			<main class = "light-mode">
+			<main>
 				<h1>Classic Motorcycles</h1>
 				<nav>
 					<ul>
@@ -86,7 +86,7 @@
 				</section>
 			</main>
 		</div>
-		<footer class = "light-mode">
+		<footer>
 			<hr>
 			<a class="page-name" href="index.html">
 				<p><b>Blackblood</b></p>
@@ -94,6 +94,6 @@
 			<p> David A.</p>
 		</footer>
 	</div>
-	<script src="scripts/script.js"></script>
+	<script src="scripts/dark-mode.js"></script>
 </body>
 </html>
