--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang = "en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Portfolio Page.">
 	<title>
 		Blackblood
 	</title>
+	
 	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg" />
 	<link rel="stylesheet" href="css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
