Adds raytracing subpage.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		<div id="main">
 			<main>
 				<section>
-					<h2>Classic Motorcycles</h2>
-					<p>Get to know classical models and a bit of their story.</p>
-					<a href="classicMotorcycles.html">
+					<h2>Raytracing</h2>
+					<p>Raytracing renderer made in Rust.</p>
+					<a href="rust_raytracing.html">
 						<figure>
-							<img src =  "imgs/classicMotorcycles/harley-davidson-iron-883.jpg" alt = "Motorcycle" />
+							<img src =  "imgs/raytracing/Reflection.png" alt = "Raytracing render." />
 							<figcaption>
-								Classic Motorcycles.
+								Raytracing render with varying metal fuzziness or material roughness.
 							</figcaption>
 						</figure>
 					</a>
