--- a/experimental.html
+++ b/experimental.html
@@ -74,7 +74,7 @@
 							</tr>
 						</table>
 						<details>
-							<summary>Rules.</summary>
+							<summary>Commands.</summary>
 							<ul>
 								<li>Click to put your mark.</li>
 								<li>'R' resets the game.</li>
