Align h2 to the left.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<figure>
 							<img src =  "imgs/raytracing/Reflection.png" alt = "Raytracing render." />
 							<figcaption>
-								Raytracing render with varying metal fuzziness or material roughness.
+								Raytracing render in Rust.
 							</figcaption>
 						</figure>
 					</a>
