--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 		<div class="toggle-dark-mode">
 				<i class="far fa-sun"></i>
 		</div>
+		<div>
+			<p>Oi, tudo bem? Sou David Andrade, um desenvolvedor amante de matemática, lógica e queijo com goiabada. Vivo em Minas Gerais, Brasil. Onde as montanhas, tão altas, combrem-se brancas. Onde a terra, tão vermelha, sangra ouro.</p>
+			<p>Uai? Acha que é mágica?</p>
+			<p>Mágica são palavras ditas, escritas, palavras que a realidade escuta e o mundo executa. Bilhões de consequências. <s>Todas ao pé da letra...</s></p>
+			<p>Então, programador, mago sou!</p>
+		</div>
 		<div id="main">
 			<main>
 				<section>
