Styling intro and profile picture.

--- a/rust_raytracing.html
+++ b/rust_raytracing.html
@@ -54,7 +54,7 @@
 					<figure>
 						<img src =  "imgs/raytracing/MetalPortal.png" alt = "Raytracing render." style="width:100%;"/>
 						<figcaption>
-							Raytracing render with varying <b>Metal Fuziness</b>.
+							Raytracing render with varying <b>Metal Fuziness</b> and central portal.
 						</figcaption>
 					</figure>
 
