--- a/index.html
+++ b/index.html
@@ -15,17 +15,29 @@
 <body>
 	<div id="container" class="container">
 		<header>
-			<a class="page-name" href="index.html"><h1>Blackblood</h1></a>
+			<div class="top">
+				<a href="index.html">Home</a>
+				<a>Blog</a>
+				<a>Contact</a>
+				<div class="toggle-dark-mode">
+					<i class="far fa-sun"></i>
+				</div>
+			</div>
+
+			<div class="intro_main">
+				<section class="intro">
+					<h2>Oi, tudo bem? Sou David Andrade,</h2>
+					<p><strong> desenvolvedor</strong> amante de matemática, lógica e queijo com goiabada. Vivo em Minas Gerais, Brasil. Onde as montanhas, tão altas, combrem-se brancas. Onde a terra, tão vermelha, sangra ouro.</p>
+					<p>Uai. Acha que é mágica?</p>
+					<p>Mágica são palavras ditas, escritas, palavras que a realidade escuta e o mundo executa. Bilhões de consequências. <s>Todas ao pé da letra...</s></p>
+					<p>Então, programador, mago sou!</p>
+					<button class="download_resume">Download Resume</button>
+				</section>
+				<img class="profile_picture" src = "imgs/ProfilePicture.svg" alt = "Profile Picture."/>
+			</div>
 		</header>
-		<div class="toggle-dark-mode">
-				<i class="far fa-sun"></i>
-		</div>
-		<div>
-			<p>Oi, tudo bem? Sou David Andrade, um desenvolvedor amante de matemática, lógica e queijo com goiabada. Vivo em Minas Gerais, Brasil. Onde as montanhas, tão altas, combrem-se brancas. Onde a terra, tão vermelha, sangra ouro.</p>
-			<p>Uai? Acha que é mágica?</p>
-			<p>Mágica são palavras ditas, escritas, palavras que a realidade escuta e o mundo executa. Bilhões de consequências. <s>Todas ao pé da letra...</s></p>
-			<p>Então, programador, mago sou!</p>
-		</div>
+
+		
 		<div id="main">
 			<main>
 				<section>
