--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<p>Uai. Acha que é mágica?</p>
 					<p>Mágica são palavras ditas, escritas, palavras que a realidade escuta e o mundo executa. Bilhões de consequências. <s>Todas ao pé da letra...</s></p>
 					<p>Então, programador, mago sou!</p>
-					<button class="download_resume">Download Resume</button>
+					<button onclick="window.open('files/Currículo_David_Andrade.pdf')" class="open_resume">Ver Currículo</button>
 				</section>
 				<img class="profile_picture" src = "imgs/ProfilePicture.svg" alt = "Profile Picture."/>
 			</div>
