--- a/index.html
+++ b/index.html
@@ -37,6 +37,43 @@
 			</div>
 		</header>
 
+		<div class="recent_posts_main">
+			<div class="recent_posts_header">
+				<p class="recent_posts_title">Recent posts</p>
+				<p class="view_all">View all</p>
+			</div>
+			<div class="recent_posts">
+				<section class="recent_post_item">
+					<h2>Prisoner's Dilemma</h2>
+					<div class="post_data">
+						<p>04 July 2023 | bash, Unix</p>
+					</div>
+					<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
+					<p>Here we developed a bash script to allow you to run your own competition.</p>
+					<p>Make sure it's not too bloody.</p>
+				</section>
+				<section class="recent_post_item">
+					<h2>Prisoner's Dilemma</h2>
+					<div class="post_data">
+						<p>04 July 2023 | bash, Unix</p>
+					</div>
+					<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
+					<p>Here we developed a bash script to allow you to run your own competition.</p>
+					<p>Make sure it's not too bloody.</p>
+				</section>
+				<section class="recent_post_item">
+					<h2>Prisoner's Dilemma</h2>
+					<div class="post_data">
+						<p>04 July 2023 | bash, Unix</p>
+					</div>
+					<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
+					<p>Here we developed a bash script to allow you to run your own competition.</p>
+					<p>Make sure it's not too bloody.</p>
+				</section>
+				
+			</div>
+		</div>
+
 		
 		<div id="main">
 			<main>
