Add featured works section.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div id="container" class="container">
+	<div class="container">
 		<header>
 			<div class="top">
 				<a href="index.html">Home</a>
@@ -37,98 +37,102 @@
 			</div>
 		</header>
 
-		<div class="recent_posts_main">
-			<div class="recent_posts_header">
-				<p class="recent_posts_title">Recent posts</p>
-				<p class="view_all">View all</p>
+		<main>
+			<div class="recent_posts_main">
+				<div class="recent_posts_header">
+					<p class="section_title">Recent posts</p>
+					<a><p class="view_all">View all</p></a>
+				</div>
+				<div class="recent_posts">
+					<section class="recent_post_item">
+						<h2>Prisoner's Dilemma</h2>
+						<div class="post_data">
+							<p>04 July 2023 | bash, Unix</p>
+						</div>
+						<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
+						<p>Here we developed a bash script to allow you to run your own competition.</p>
+						<p>Make sure it's not too bloody.</p>
+					</section>
+					<section class="recent_post_item">
+						<h2>Prisoner's Dilemma</h2>
+						<div class="post_data">
+							<p>04 July 2023 | bash, Unix</p>
+						</div>
+						<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
+						<p>Here we developed a bash script to allow you to run your own competition.</p>
+						<p>Make sure it's not too bloody.</p>
+					</section>
+					<section class="recent_post_item">
+						<h2>Prisoner's Dilemma</h2>
+						<div class="post_data">
+							<p>04 July 2023 | bash, Unix</p>
+						</div>
+						<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
+						<p>Here we developed a bash script to allow you to run your own competition.</p>
+						<p>Make sure it's not too bloody.</p>
+					</section>
+					
+				</div>
 			</div>
-			<div class="recent_posts">
-				<section class="recent_post_item">
-					<h2>Prisoner's Dilemma</h2>
-					<div class="post_data">
-						<p>04 July 2023 | bash, Unix</p>
+
+			<div class="featured_works_main">
+				<p class="section_title">Featured Works</p>
+				<div class="featured_works">
+
+					<div>
+						<div class="featured_work_item">
+							<section>
+								<a href="rust_raytracing.html"><h2>Raytracing</h2></a>
+								<div class="post_data">
+									<p>05 July 2023 | Rust, Render, Computer Graphics</p>
+								</div>
+								<p>Ray Tracing renderer made in Rust.</p>
+							</section>
+							<a href="rust_raytracing.html"><img src="imgs/raytracing/Refraction.png" alt="Ray tracing redenr image."/></a>
+						</div>
+						<hr>
 					</div>
-					<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
-					<p>Here we developed a bash script to allow you to run your own competition.</p>
-					<p>Make sure it's not too bloody.</p>
-				</section>
-				<section class="recent_post_item">
-					<h2>Prisoner's Dilemma</h2>
-					<div class="post_data">
-						<p>04 July 2023 | bash, Unix</p>
+
+					<div>
+						<div class="featured_work_item">
+							<section>
+								<a href="unity.html"><h2>Unity Projects</h2></a>
+								<div class="post_data">
+									<p>05 July 2023 | Rust, Render, Computer Graphics</p>
+								</div>
+								<p>Cool game-engine projects for you.</p>
+							</section>
+							<a href="unity.html"><img src =  "imgs/unity-logo.jpg" alt = "Unity logo." /></a>
+						</div>
+						<hr>
 					</div>
-					<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
-					<p>Here we developed a bash script to allow you to run your own competition.</p>
-					<p>Make sure it's not too bloody.</p>
-				</section>
-				<section class="recent_post_item">
-					<h2>Prisoner's Dilemma</h2>
-					<div class="post_data">
-						<p>04 July 2023 | bash, Unix</p>
+
+					<div>
+						<div class="featured_work_item">
+							<section>
+								<a href="experimental.html"><h2>Experimental Page</h2></a>
+								<div class="post_data">
+									<p>05 July 2023 | Rust, Render, Computer Graphics</p>
+								</div>
+								<p>Find and experiment with new features.</p>
+							</section>
+							<a href="experimental.html"><img src="imgs/terminator.jpg" alt="Terminator"/></a>
+						</div>
+						<hr>
 					</div>
-					<p>Challenge independent agents in the infamous prisoner's dilemma.</p>
-					<p>Here we developed a bash script to allow you to run your own competition.</p>
-					<p>Make sure it's not too bloody.</p>
-				</section>
-				
+
+				</div>
 			</div>
-		</div>
+		</main>
 
-		
-		<div id="main">
-			<main>
-				<section>
-					<h2>Raytracing</h2>
-					<p>Raytracing renderer made in Rust.</p>
-					<a href="rust_raytracing.html">
-						<figure>
-							<img src =  "imgs/raytracing/Reflection.png" alt = "Raytracing render." />
-							<figcaption>
-								Raytracing render in Rust.
-							</figcaption>
-						</figure>
-					</a>
-				</section>
-
-				<br>
-
-				<section>
-					<h2>Unity Projects</h2>
-					<p>Cool game-engine projects for you.</p>
-					<a href="unity.html">
-						<figure>
-							<img src =  "imgs/unity-logo.jpg" alt = "Unity" />
-							<figcaption>
-								Unity Projects.
-							</figcaption>
-						</figure>
-					</a>
-				</section>
-
-				<br>
-
-				<section>
-					<h2>Experimental Page</h2>
-					<p>
-						Find and experiment with new features.
-					</p>
-					<a href="experimental.html">
-						<figure>
-							<img src="imgs/terminator.jpg" alt="Terminator"/>
-							<figcaption>
-								Experimental Features.
-							</figcaption>
-						</figure>
-					</a>
-				</section>
-			</main>
-		</div>
 		<footer>
-			<hr>
-			<a class="page-name" href="index.html">
-				<p><b>Blackblood</b></p>
-			</a>
-			<p> David A.</p>
+			<div class="footer_main">
+				<hr>
+				<a href="index.html">
+					<p class="page-name"><b>Blackblood</b></p>
+				</a>
+				<p>by David A.</p>
+			</div>
 		</footer>
 	</div>
 	<script src="scripts/dark-mode.js"></script>
