Reorganizing into pages folder and adding blog page.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,8 +8,8 @@
 		Blackblood
 	</title>
 	
-	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="icon" type="image/jpg" href="../imgs/page-icon.jpg" />
+	<link rel="stylesheet" href="../css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
@@ -17,8 +17,8 @@
 	<div class="container">
 		<header>
 			<div class="top">
-				<a href="index.html">Home</a>
-				<a>Blog</a>
+				<a href="../index.html">Home</a>
+				<a href="blog.html">Blog</a>
 				<a href="contact.html">Contact</a>
 				<div class="toggle-dark-mode">
 					<i class="far fa-sun"></i>
@@ -32,9 +32,9 @@
 					<p><strong>Email:</strong> <a href="mailto:david.andrade.dk@gmail.com">david.andrade.dk@gmail.com</a></p>
                     <p><strong>Git:</strong> <a href="https://github.com/davidfrk">https://github.com/davidfrk</a></p>
 					
-					<button onclick="window.open('files/Currículo_David_Andrade.pdf')" class="open-resume">See Resume</button>
+					<button onclick="window.open('../files/Currículo_David_Andrade.pdf')" class="open-resume">See Resume</button>
 				</section>
-				<img class="profile-picture" src = "imgs/ProfilePicture.svg" alt = "Profile Picture."/>
+				<img class="profile-picture" src = "../imgs/ProfilePicture.svg" alt = "Profile Picture."/>
 			</div>
 		</header>
 
@@ -45,7 +45,7 @@
 		<footer>
 			<div class="footer-main">
 				<hr>
-				<a href="index.html">
+				<a href="../index.html">
 					<p class="page-name"><b>Blackblood</b></p>
 				</a>
 				<a href="https://github.com/davidfrk" target="_blank">
@@ -57,6 +57,6 @@
 			</div>
 		</footer>
 	</div>
-	<script src="scripts/dark-mode.js"></script>
+	<script src="../scripts/dark-mode.js"></script>
 </body>
 </html>
