Added vehicle simulation page.

--- a/pages/rust-raytracing.html
+++ b/pages/rust-raytracing.html
@@ -40,7 +40,7 @@
 						<a href="#point-light">Point Light Render.</a>
 					</li>
 					<li>
-						<a href="../index.html">Back.
+						<a href="blog.html">Back.
 							<i class="fa-solid fa-share fa-flip-horizontal"></i>
 						</a>
 					</li>
