Altering dark mode icon.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	
 	<link rel="icon" type="image/jpg" href="imgs/page-icon.jpg" />
 	<link rel="stylesheet" href="css/style.css" />
-	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 <body>
@@ -21,14 +20,14 @@
 				<a href="pages/blog.html">Blog</a>
 				<a href="pages/contact.html">Contact</a>
 				<div class="toggle-dark-mode">
-					<i class="far fa-sun"></i>
+					<img class="dark-mode-icon" src="/imgs/sun.svg" alt="Light theme icon."/>
 				</div>
 			</div>
 
 			<div class="intro-main">
 				<section class="intro">
 					<h2>Oi, tudo bem? Sou David Andrade,</h2>
-					<p><strong> desenvolvedor</strong> amante de matemática, lógica e queijo com goiabada. Vivo em Minas Gerais, Brasil. Onde as montanhas, tão altas, combrem-se brancas. Onde a terra, tão vermelha, sangra ouro.</p>
+					<p><strong> desenvolvedor</strong>, amante de matemática, lógica e queijo com goiabada. Vivo em Minas Gerais, Brasil. Onde as montanhas, tão altas, combrem-se brancas. Onde a terra, tão vermelha, sangra ouro.</p>
 					<p>Uai. Acha que é mágica?</p>
 					<p>Mágica são palavras ditas, escritas, palavras que a realidade escuta e o mundo executa. Bilhões de consequências. <s>Todas ao pé da letra...</s></p>
 					<p>Então, programador, mago sou!</p>
