--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -21,7 +21,7 @@
 				<a href="blog.html">Blog</a>
 				<a href="contact.html">Contact</a>
 				<div class="toggle-dark-mode">
-					<i class="far fa-sun"></i>
+					<img class="dark-mode-icon" src="/imgs/sun.svg" alt="Light theme icon."/>
 				</div>
 			</div>
 		</header>
