--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,6 @@
 	
 	<link rel="icon" type="image/jpg" href="../imgs/page-icon.jpg" />
 	<link rel="stylesheet" href="../css/style.css" />
-	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 <body>
@@ -21,7 +20,7 @@
 				<a href="blog.html">Blog</a>
 				<a href="contact.html">Contact</a>
 				<div class="toggle-dark-mode">
-					<i class="far fa-sun"></i>
+					<img class="dark-mode-icon" src="/imgs/sun.svg" alt="Light theme icon."/>
 				</div>
 			</div>
             <div class="intro-main">
