Change Page Icon and remove unnecessary files.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
 		Blackblood
 	</title>
 	
-	<link rel="icon" type="image/jpg" href="../imgs/page-icon.jpg" />
+	<link rel="icon" type="image/jpg" href="../imgs/page-icon.svg" />
 	<link rel="stylesheet" href="../css/style.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
@@ -20,7 +20,7 @@
 				<a href="blog.html">Blog</a>
 				<a href="contact.html">Contact</a>
 				<div class="toggle-dark-mode">
-					<img class="dark-mode-icon" src="/imgs/sun.svg" alt="Light theme icon."/>
+					<img class="dark-mode-icon" src="../imgs/sun.svg" alt="Light theme icon."/>
 				</div>
 			</div>
             <div class="intro-main">
