Update page name.

--- a/pages/vehicle-simulation.html
+++ b/pages/vehicle-simulation.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Portfolio Page.">
 	<title>
-		Blackblood
+		Coder
 	</title>
 	
 	<link rel="icon" type="image/jpg" href="../imgs/page-icon.svg" />
@@ -78,7 +78,7 @@
 			<div class="footer-main">
 				<hr>
 				<a href="../index.html">
-					<p class="page-name"><b>Blackblood</b></p>
+					<p class="page-name"><b>Coder</b></p>
 				</a>
 				<a href="https://github.com/davidfrk" target="_blank">
 					<div class="author">
